Hack to fix shadows that get cut off by overflow:hidden

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -342,6 +342,8 @@ a {
 /* Content */
 article {
 	margin-bottom: 25px;
+	margin: -20px;
+	padding: 20px;
 	overflow: hidden;
 	.single & { margin-bottom: 0; }
 	h1 {
